--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -6,7 +6,7 @@
             <h3>Create New Listing</h3>
             <form method="POST" action="/listings" novalidate class="needs-validation" enctype="multipart/form-data">
                 <div class="mb-3">
-                    <label for="title" class="form-label">Title</label>
+                    <label for="title" class="form-label"><b>Title</b></label>
                     <input type="text" name="listing[title]" placeholder="Enter title" class="form-control" required>
                     <div class="invalid-feedback">
                         Please enter a valid title.
@@ -14,7 +14,7 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="description" class="form-label">Description</label>
+                    <label for="description" class="form-label"><b>Description</b></label>
                     <textarea name="listing[description]"  cols="20" rows="4" placeholder="Enter description" class="form-control" required></textarea>
                     <div class="invalid-feedback">
                         Please enter a valid description.
@@ -22,7 +22,7 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="image" class="form-label">Upload Image</label>
+                    <label for="image" class="form-label"><b>Upload Image</b></label>
                     <input type="file" name="listing[image]" class="form-control" required >
                     
                 </div>
@@ -30,14 +30,14 @@
                 
                 <div class="row">
                     <div class="mb-3 col-md-4">
-                        <label for="price" class="form-label">Price</label>
+                        <label for="price" class="form-label"><b>Price</b></label>
                         <input type="text" name="listing[price]" placeholder="Enter price" class="form-control" >
                         <div class="invalid-feedback">
                             Please enter a valid price.
                         </div>
                     </div>
                     <div class="mb-3 col-md-8">
-                        <label for="location" class="form-label">Location</label>
+                        <label for="location" class="form-label"><b>Location</b></label>
                         <input type="text" name="listing[location]" placeholder="Enter location"class="form-control" required>
                         <div class="invalid-feedback">
                             Please enter a valid location.
@@ -46,7 +46,7 @@
                 </div>
 
                     <div class="mb-3">
-                        <label for="country" class="form-label">Country</label>
+                        <label for="country" class="form-label"><b>Country</b></label>
                         <input type="text" name="listing[country]" placeholder="Enter country"class="form-control" required>
                         <div class="invalid-feedback">
                             Please enter a valid country.
